--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "radar-sport-api": "^1.0.5",
     "react": "^18",
     "react-dom": "^18",
+    "redis": "^5.10.0",
     "sports-odds-api": "^1.3.0",
     "stripe": "^20.0.0",
     "telegraf": "^4.16.3",
