feat: wire live matches API to map BetsAPI data for CS2

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ NEXT_PUBLIC_STRIPE_PRICE_SEMESTRAL=
 STRIPE_PIX_PRICE_MONTHLY=
 STRIPE_PIX_PRICE_QUARTERLY=
 STRIPE_PIX_PRICE_SEMESTRAL=
+NEXT_PUBLIC_STRIPE_PIX_PRICE_MONTHLY=
+NEXT_PUBLIC_STRIPE_PIX_PRICE_QUARTERLY=
+NEXT_PUBLIC_STRIPE_PIX_PRICE_SEMESTRAL=
+STRIPE_PIX_PRICE_MONTHLY=
+STRIPE_PIX_PRICE_QUARTERLY=
+STRIPE_PIX_PRICE_SEMESTRAL=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_BOT_USERNAME=
 INTERNAL_APP_URL=http://127.0.0.1:3000
