feat: seed prelive favoritos automaticamente

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,8 @@ ENABLE_GAME_ALERTS=true
 GAME_ALERT_CHECK_INTERVAL_MS=120000
 GAME_ALERT_WINDOW_START_MINUTES=8
 GAME_ALERT_WINDOW_END_MINUTES=10
+ENABLE_PRELIVE_SEEDER=true
+PRELIVE_SEED_INTERVAL_MS=3600000
+PRELIVE_SEED_LOOKAHEAD_DAYS=1
+PRELIVE_SEED_MAX_MATCHES_PER_RUN=50
+PRELIVE_SEED_DELAY_MS=300
